Upgrading spring swagger jpa and app version

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   datasource:
     url: jdbc:postgresql://${CRDB_DB_HOST}:${CRDB_DB_PORT}/${CRDB_DB}
     username: ${CRDB_USERNAME}
+  jpa:
+    database: postgresql
   cloud:
     loadbalancer:
       ribbon:
