--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <springdoc.version>2.0.0</springdoc.version>
         <google-gson.version>2.10.1</google-gson.version>
         <google-guava.version>31.1-jre</google-guava.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <protobuf.version>4.29.2</protobuf.version>
         <ping-client.version>1.0.4</ping-client.version>
         <artifactory.version>1.1.17</artifactory.version>
@@ -86,7 +87,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
         <dependency>
